--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@ top: 100px;}
   
 .move {top: 1500px;}
 
-.container .content {padding: 0;}
+.container, .content, .mobile {padding: 0;}
 
 .image {display: none;}
 
